# ChangeLog for sys-fs/btrfs-progs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs-progs/ChangeLog,v 1.3 2008/05/29 17:00:18 lavajoe Exp $

*btrfs-progs-0.15 (29 May 2008)

  29 May 2008; Joe Peterson <lavajoe@gentoo.org> +btrfs-progs-0.15.ebuild:
  Version bump to 0.15

*btrfs-progs-0.14-r1 (27 May 2008)

  27 May 2008; Joe Peterson <lavajoe@gentoo.org>
  +btrfs-progs-0.14-r1.ebuild:
  Adjust installed utility names/links

*btrfs-progs-0.14 (24 May 2008)

  24 May 2008; Joe Peterson <lavajoe@gentoo.org>
  +files/btrfs-progs-0.14-hotfix.patch, +metadata.xml,
  +btrfs-progs-0.14.ebuild:
  New package: Btrfs utilities
