@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/btrfs-progs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs-progs/ChangeLog,v 1.3 2008/05/29 17:00:18 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/btrfs-progs/ChangeLog,v 1.4 2008/05/30 18:13:36 lavajoe Exp $
+
+*btrfs-progs-0.15-r1 (30 May 2008)
+
+  30 May 2008; Joe Peterson <lavajoe@gentoo.org>
+  +btrfs-progs-0.15-r1.ebuild:
+  Do not make fsck.btrfs link - segfault on boot
 
 *btrfs-progs-0.15 (29 May 2008)
 
